<resources>
    <string name="app_name">My Application</string>
    <string name="editMessage">输入信息</string>
    <string name="button_send">SEND</string>
    <string name="model_name">model.pt</string>
    <string name="button_jump">Jump</string>
    <string name="start">开始预测</string>
    <string name="esc">结束预测</string>
    <string name="out_view">等待输出</string>
    <string name="libpytorch_jni_lite">https://gitee.com/mydreamy/so-file/raw/master/x86/libpytorch_jni_lite.so</string>
    <string name="libfbjni">https://gitee.com/mydreamy/so-file/raw/master/x86/libfbjni.so</string>
    <string name="libcxx_shared">https://gitee.com/mydreamy/so-file/raw/master/x86/libc++_shared.so</string>
</resources>